[BE] feat: 북마크 생성 API 작성
이슈 번호: #3

- 북마크를 생성하기 위한 API 작성
  - POST /api/v1/bookmark/new
  - GORM에 익숙치 않아 생성 과정 중 foreign key 이슈가 있었음. 우선은 테이블 간 관계보다 crud api 작성이 우선이라 판단하여 모델의 외래키 부분은 주석 처리
- 테스트 코드 작성 필요
