# backend/db/models/bookmark.go
@@ -6,8 +6,8 @@ import "gorm.io/gorm"
 // https://gorm.io/docs/has_many.html
 type Bookmark struct {
 	gorm.Model
-	UserID   uint
-	Title    string    `gorm:"index;"`
-	Link     string    `gorm:"not null;"`
-	Keywords []Keyword `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
+	UserID uint
+	Title  string `gorm:"index;"`
+	Link   string `gorm:"not null;"`
+	//Keywords []Keyword `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
 }
